--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-select": "^1.13.18",
+    "framer-motion": "^11.3.31",
+    "gsap": "^3.12.5",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
@@ -31,6 +33,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "sass": "^1.70.0",
+    "split-type": "^0.3.4",
     "swiper": "^11.1.11"
   },
   "devDependencies": {
