--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "sass": "^1.70.0",
     "split-type": "^0.3.4",
-    "swiper": "^11.1.11"
+    "swiper": "^11.1.11",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -48,6 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "gulp": "^4.0.2",
+    "sass": "^1.78.0",
     "vite": "^5.4.1"
   }
 }
