--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "gulp",
-    "devgulp": "gulp serve",
+    "start": "vite",
     "prod": "cross-env NODE_ENV=prod gulp"
   },
   "dependencies": {
@@ -18,18 +17,9 @@
     "bootstrap-select": "^1.13.18",
     "framer-motion": "^11.3.31",
     "gsap": "^3.12.5",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^9.1.0",
-    "gulp-js-import": "^1.0.6",
-    "gulp-minify": "^3.1.0",
-    "gulp-replace": "^1.1.4",
-    "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
     "jquery": "^3.7.1",
     "lenis": "^1.1.13",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
@@ -47,7 +37,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "gulp": "^4.0.2",
     "sass": "^1.78.0",
     "vite": "^5.4.1"
   }
