--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.1",
     "split-type": "^0.3.4",
     "swiper": "^11.1.11",
@@ -39,6 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "sass": "^1.78.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
