--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
