--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "lenis": "^1.1.13",
+    "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
