--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.5.0",
+    "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
