theme, theme transition, dependecies deleted, form container

--- a/package.json
+++ b/package.json
@@ -17,23 +17,18 @@
     "@react-three/fiber": "^8.17.10",
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^11.11.8",
-    "gltf-pipeline": "^4.1.0",
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "lenis": "^1.1.13",
-    "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-grid-layout": "^1.5.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.1",
     "react-scroll": "^1.9.0",
     "split-type": "^0.3.4",
-    "swiper": "^11.1.11",
-    "three": "^0.169.0",
-    "yargs": "^17.7.2"
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
