--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "prod": "cross-env NODE_ENV=prod gulp"
   },
   "dependencies": {
-    "@barba/core": "^2.10.3",
     "@react-three/drei": "^9.114.4",
     "@react-three/fiber": "^8.17.10",
-    "@studio-freight/lenis": "^1.0.42",
     "flubber": "^0.4.2",
     "framer-motion": "^11.11.8",
     "gsap": "^3.12.5",
@@ -27,12 +25,11 @@
     "react-pdf": "^9.1.1",
     "react-router-dom": "^6.26.1",
     "split-type": "^0.3.4",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
@@ -40,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "sass": "^1.78.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-prerender": "^1.0.8"
   }
 }
