--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "prod": "cross-env NODE_ENV=prod gulp"
   },
   "dependencies": {
-    "@react-three/drei": "^9.120.0",
     "@react-three/fiber": "^8.17.10",
     "flubber": "^0.4.2",
     "framer-motion": "^11.11.8",
@@ -25,6 +24,8 @@
     "react-router-dom": "^6.26.1",
     "split-type": "^0.3.4",
     "three": "^0.171.0",
+    "three-stdlib": "^2.34.0",
+    "troika-three-text": "^0.52.2",
     "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
