--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "vite",
-    "prod": "cross-env NODE_ENV=prod gulp"
+    "prod": "cross-env NODE_ENV=prod gulp",
+    "build:sw": "npx workbox generateSW workbox-config.cjs"
   },
   "dependencies": {
     "@react-three/fiber": "^8.17.10",
@@ -38,6 +39,8 @@
     "globals": "^15.9.0",
     "sass": "^1.78.0",
     "vite": "^5.4.1",
-    "vite-plugin-prerender": "^1.0.8"
+    "vite-plugin-prerender": "^1.0.8",
+    "workbox-build": "^7.3.0",
+    "workbox-cli": "^7.3.0"
   }
 }
