--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "three": "^0.171.0",
     "three-stdlib": "^2.34.0",
     "troika-three-text": "^0.52.2",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-pwa": "^0.21.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
