--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:sw": "npx workbox generateSW workbox-config.cjs"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.3",
     "@react-three/fiber": "^8.17.10",
     "flubber": "^0.4.2",
     "framer-motion": "^11.11.8",
