--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-three/drei": "^9.120.3",
     "@react-three/fiber": "^8.17.10",
+    "axios": "^1.7.9",
     "flubber": "^0.4.2",
     "framer-motion": "^11.11.8",
     "gsap": "^3.12.5",
