--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sass": "^1.78.0",
     "vite": "^5.4.1",
     "vite-plugin-prerender": "^1.0.8",
+    "vite-plugin-react-pages": "^5.0.0",
     "workbox-build": "^7.3.0",
     "workbox-cli": "^7.3.0"
   }
