--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
       "source": "/(.*)",
       "headers": [
         {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        },
+        {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
         },
