--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,9 @@
-worker_processes auto;
+worker_processes  1;        # Usa un solo proceso de trabajo
+worker_rlimit_nofile 1024;
 
 events {
-    use epoll;       # Usa epoll para compatibilidad con Docker
     worker_connections 1024;
+    use poll;              # Usa 'poll' en lugar de 'epoll' o 'select' para máxima compatibilidad
 }
 
 http {
@@ -10,8 +11,9 @@ http {
     default_type  application/octet-stream;
 
     sendfile        on;
-    aio             off;  # Desactiva AIO
     tcp_nopush      on;
+    aio             off;   # Desactiva AIO completamente
+    directio        512;   # Opcional: Aumenta compatibilidad con archivos grandes
 
     server {
         listen       80;
@@ -22,6 +24,6 @@ http {
             index  index.html;
         }
 
-        error_page 404 /index.html; # Redirige los errores 404 a index.html para SPA
+        error_page 404 /index.html;  # Redirige errores 404 a index.html para SPA
     }
 }
