--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.11.8",
     "gsap": "^3.12.5",
+    "i18next": "^24.2.0",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-http-backend": "^3.0.1",
     "lenis": "^1.1.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^15.2.0",
     "react-pdf": "^9.1.1",
     "react-router-dom": "^6.26.1",
     "split-type": "^0.3.4",
